--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 </div>
 
 </form>
+<script>
+    function signupPage() {
+    window.open("https://asim-thoughtwin.github.io/signup/");
+  }
+</script>
 <script src="signup-login.js"></script>
 </body>
 
